--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         <link href="/static/styles.css" rel="stylesheet">
 
         <!-- Icon -->
-        <link href="#" rel="icon">
+        <link href="static/favicon.ico" rel="icon">
 
         <title>TranslateAll</title>
     </head>
